add typing for HFC

--- a/macrosMain.tex
+++ b/macrosMain.tex
@@ -164,6 +164,7 @@ body}}
 \newcommand{\rtype}{\textit{R}}
 \newcommand{\stype}{\textit{S}}
 \newcommand{\builtintype}{\textit{B}}
+\newcommand{\ltypeset}{\textit{Lset}}
 
 \newcommand{\ftypeOf}[1]{\mathtt{field}(#1)}
 
@@ -179,6 +180,8 @@ body}}
 \newcommand{\ltypescheme}{\textit{LS}}
 
 \newcommand{\TtypEnv}{\mathcal{A}}
+\newcommand{\OtypEnv}{\mathcal{S}}
+\newcommand{\MtypEnv}{\mathcal{M}}
 \newcommand{\OStypEnv}{\mathcal{B}}
 \newcommand{\TStypEnv}{\mathcal{D}}
 \newcommand{\LTStypEnv}{\mathcal{D}}
